--- a/src/Header.css
+++ b/src/Header.css
@@ -1,4 +1,7 @@
 .header {
+	position: fixed;
+	width: 100vw;
+	height: 5vh;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
