--- a/src/Chat.css
+++ b/src/Chat.css
@@ -1,4 +1,5 @@
 .table_chat {
+	width: 100%;
 	display: flex;
 	flex: 1.0;
 	flex-direction: row;
@@ -9,7 +10,6 @@
 	color: white;
 	padding: 25px;
 	background-color: rgb(13, 49, 27);
-	border-top: 3px solid gold;
 }
 
 .table_users_header {
@@ -55,4 +55,8 @@
 .chat__headerRight > p > .MuiSvgIcon-root {
 	margin-right: 5px !important;
 	font-size: 16px;
+}
+
+.scroll-spacer {
+	height: 1px;
 }
