--- a/src/Chat.css
+++ b/src/Chat.css
@@ -28,11 +28,14 @@
 }
 
 .chat__header {
+	position: absolute;
+	width: 72%;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	padding: 20px;
 	border-bottom: 1px solid lightgray;
+	background-color: white;
 }
 
 .chat__channelName {
@@ -55,6 +58,10 @@
 .chat__headerRight > p > .MuiSvgIcon-root {
 	margin-right: 5px !important;
 	font-size: 16px;
+}
+
+.chat__messages {
+	margin-top: 60px;
 }
 
 .scroll-spacer {
