--- a/src/Street.css
+++ b/src/Street.css
@@ -1,22 +1,26 @@
+#test__no_bar {
+	color: black;
+}
+
 .street {
-  height: 80vh;
-  flex: 1.0;
-  display: flex;
-  flex-direction: column;
-  background-color: #f8f8f8;
-  color: white;
-  padding: 20px;
+	height: 80vh;
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	background-color: #f8f8f8;
+	color: white;
+	padding: 20px;
 }
 
 .street_header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  background-color: rgb(13, 49, 27);
-  padding: 20px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	background-color: rgb(13, 49, 27);
+	padding: 20px;
 }
 
 .bar_list {
-  display: flex;
-  flex-direction: row;
+	display: flex;
+	flex-direction: row;
 }
