--- a/src/Street.css
+++ b/src/Street.css
@@ -24,3 +24,18 @@
 	display: flex;
 	flex-direction: row;
 }
+
+#input__bar_box {
+	display: none !important;
+}
+
+button.MuiButtonBase-root,
+.MuiButton-root,
+.MuiButton-contained,
+.MuiButton-containedPrimary {
+	background-color: rgb(26, 96, 53);
+}
+
+button.MuiButtonBase-root:hover {
+	background-color: rgb(20, 191, 46);
+}
