--- a/src/Login.css
+++ b/src/Login.css
@@ -1,18 +1,25 @@
 .login {
 	height: 100vh;
-	background-color: #f8f8f8;
+	background-image: url("images/background.png");
+	background-size: cover;
+	box-shadow:inset 0 0 0 2000px rgba(30, 5, 33, 0.9);
+	background-color: #1e0521;
 	display: grid;
 	place-items: center;
+	
+	
 }
 
 .login__container {
 	padding: 100px;
-	background-color: white;
+	color: #ff6d69;
+	/* background-color: rgba(30, 5, 33, 0.9); */
 	border-radius: 10px;
-	box-shadow: 5px 5px 5px -2px rgba(0, 0, 0, 0.24);
-	-webkit-box-shadow: 5px 5px 5px -2px rgba(0, 0, 0, 0.24);
-	-moz-box-shadow: 5px 5px 5px -2px rgba(0, 0, 0, 0.24);
+	/* box-shadow: 5px 5px 5px -2px rgba(0, 0, 0, 0.24); */
+	/* -webkit-box-shadow: 5px 5px 5px -2px rgba(0, 0, 0, 0.24); */
+	/* -moz-box-shadow: 5px 5px 5px -2px rgba(0, 0, 0, 0.24); */
 	text-align: center;
+	align-self: baseline;
 }
 
 .login__container > img {
