--- a/src/Login.css
+++ b/src/Login.css
@@ -13,11 +13,11 @@
 .login__container {
 	padding: 100px;
 	color: #ff6d69;
-	/* background-color: rgba(30, 5, 33, 0.9); */
+	background-color: rgba(30, 5, 33, 0.9);
 	border-radius: 10px;
-	/* box-shadow: 5px 5px 5px -2px rgba(0, 0, 0, 0.24); */
-	/* -webkit-box-shadow: 5px 5px 5px -2px rgba(0, 0, 0, 0.24); */
-	/* -moz-box-shadow: 5px 5px 5px -2px rgba(0, 0, 0, 0.24); */
+	box-shadow: 5px 5px 5px -2px rgba(0, 0, 0, 0.24); 
+	-webkit-box-shadow: 5px 5px 5px -2px rgba(0, 0, 0, 0.24);
+	-moz-box-shadow: 5px 5px 5px -2px rgba(0, 0, 0, 0.24);
 	text-align: center;
 	align-self: baseline;
 }
@@ -31,6 +31,6 @@
 .login__container > button {
 	margin-top: 50px;
 	text-transform: inherit !important;
-	background-color: #0a8d48 !important;
+	background-color: #010b8b !important;
 	color: white;
 }
