--- a/src/Login.css
+++ b/src/Login.css
@@ -2,22 +2,20 @@
 	height: 100vh;
 	background-image: url("images/background.png");
 	background-size: cover;
-	box-shadow:inset 0 0 0 2000px rgba(30, 5, 33, 0.9);
+	box-shadow: inset 0 0 0 2000px rgba(30, 5, 33, 0.9);
 	background-color: #1e0521;
 	display: grid;
 	place-items: center;
-	
-	
 }
 
 .login__container {
 	padding: 100px;
-	color: #ff6d69;
-	background-color: rgba(30, 5, 33, 0.9);
-	border-radius: 10px;
-	box-shadow: 5px 5px 5px -2px rgba(0, 0, 0, 0.24); 
+	color: #fffffe;
+	background-color: transparent;
+	/* border-radius: 10px;
+	box-shadow: 5px 5px 5px -2px rgba(0, 0, 0, 0.24);
 	-webkit-box-shadow: 5px 5px 5px -2px rgba(0, 0, 0, 0.24);
-	-moz-box-shadow: 5px 5px 5px -2px rgba(0, 0, 0, 0.24);
+	-moz-box-shadow: 5px 5px 5px -2px rgba(0, 0, 0, 0.24); */
 	text-align: center;
 	align-self: baseline;
 }
@@ -26,11 +24,37 @@
 	object-fit: contain;
 	height: 100px;
 	margin-bottom: 40px;
+	filter: invert(100%);
 }
 
 .login__container > button {
 	margin-top: 50px;
 	text-transform: inherit !important;
-	background-color: #010b8b !important;
-	color: white;
+	background-color: #ffeb14 !important;
+	color: #1e0521;
+	opacity: 0.7;
+}
+
+.btn {
+	border: 1px solid;
+	background-color: transparent;
+	text-transform: uppercase;
+	font-size: 14px;
+	padding: 10px 20px;
+	font-weight: 300;
+}
+
+.two {
+	color: #ffdc14;
+}
+
+.btn:hover {
+	color: #7a1485;
+	border: 0;
+	opacity: 1;
+}
+
+.two:hover {
+	background-color: #ffdc14;
+	box-shadow: 10px 10px 99px 6px #ffdc14;
 }
