--- a/src/Header.css
+++ b/src/Header.css
@@ -32,7 +32,7 @@
 	margin-right: 2px;
 }
 
-.header__search {
+/* .header__search {
 	flex: 0.4;
 	background-color: #421f44;
 	text-align: center;
@@ -50,7 +50,7 @@
 	text-align: center;
 	min-width: 35vw;
 	color: white;
-}
+} */
 
 .header__right {
 	flex: 0.3;
@@ -66,6 +66,12 @@
 .header__right > .MuiSvgIcon-root {
 	margin-left: auto;
 	margin-right: 20px;
+}
+
+.nav__cocktail > img {
+	max-width: 30px;
+	filter: invert(100%);
+	margin-left: 10px;
 }
 
 .MuiCard-root {
