--- a/src/Message.css
+++ b/src/Message.css
@@ -27,13 +27,13 @@
 	top: 10px;
 }
 
-div > .box {
+div > .message__bubble {
 	display: inline-block;
 	margin: 0px 0px 0px 17px;
 	border-radius: 15px;
 	background: #4051b5;
 	color: #fff;
-	padding: 20px;
+	padding: 10px 20px 10px 20px;
 	text-align: left;
 	font-weight: 900;
 	font-family: arial;
@@ -44,7 +44,7 @@ div > .box {
 	word-wrap: break-word;
 }
 
-div > .sb1:before {
+div > .bubble__lip:before {
 	content: "";
 	width: 0px;
 	height: 0px;
