work in progress...

--- a/src/Message.css
+++ b/src/Message.css
@@ -27,6 +27,7 @@
 	top: 10px;
 }
 
+/* chat bubble styling for user */
 div > .message__bubble {
 	display: inline-block;
 	margin: 0px 0px 0px 17px;
@@ -56,8 +57,10 @@ div > .bubble__lip:before {
 	left: -16px;
 	top: 0px;
 }
+/* chat bubble styling for user */
 
-div > .message__bubbleAlt {
+/* chat bubble styling for everyone else */
+div > .message__bubble__alt {
 	display: inline-block;
 	margin: 0px 0px 0px 17px;
 	border-radius: 15px;
@@ -74,7 +77,7 @@ div > .message__bubbleAlt {
 	word-wrap: break-word;
 }
 
-div > .bubble__lipAlt:before {
+div > .bubble__lip__alt:before {
 	content: "";
 	width: 0px;
 	height: 0px;
@@ -86,3 +89,37 @@ div > .bubble__lipAlt:before {
 	left: -16px;
 	top: 0px;
 }
+/* chat bubble styling for everyone else */
+
+/* chat bubble styling for whispers */
+div > .whisper__bubble {
+	display: inline-block;
+	margin: 0px 0px 0px 17px;
+	border-radius: 15px;
+	background: #4051b5;
+	color: #fff;
+	font-style: italic;
+	padding: 10px 20px 10px 20px;
+	text-align: left;
+	font-weight: 900;
+	font-family: arial;
+	position: relative;
+	top: 16px;
+	z-index: -1000;
+	max-width: 1000px;
+	word-wrap: break-word;
+}
+
+div > .bubble__lip__whisper:before {
+	content: "";
+	width: 0px;
+	height: 0px;
+	position: absolute;
+	border-left: 15px solid transparent;
+	border-right: 15px solid #4051b5;
+	border-top: 15px solid #4051b5;
+	border-bottom: 15px solid transparent;
+	left: -16px;
+	top: 0px;
+}
+/* chat bubble styling for whispers */
