--- a/src/Street.css
+++ b/src/Street.css
@@ -7,7 +7,8 @@
 	flex: 1;
 	display: flex;
 	flex-direction: column;
-	background-color: #f8f8f8;
+	background-color: rgba(255, 255, 255, 0.708);
+	background-image: url("./images/redox-01.png");
 	color: white;
 	padding: 20px;
 	margin-top: -32px;
