--- a/src/WhisperInput.css
+++ b/src/WhisperInput.css
@@ -23,3 +23,8 @@
 .MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
 	border-color: #000000 !important;
 }
+
+.whisperInput {
+	padding-right: 10px;
+	
+}
