--- a/src/Message.css
+++ b/src/Message.css
@@ -33,7 +33,7 @@ div > .message__bubble {
 	display: inline-block;
 	margin: 0px 0px 0px 17px;
 	border-radius: 15px;
-	background: #4051b5;
+	background: #311f34;
 	color: #fff;
 	padding: 10px 20px 10px 20px;
 	text-align: left;
@@ -52,8 +52,8 @@ div > .bubble__lip:before {
 	height: 0px;
 	position: absolute;
 	border-left: 15px solid transparent;
-	border-right: 15px solid #4051b5;
-	border-top: 15px solid #4051b5;
+	border-right: 15px solid #311f34;
+	border-top: 15px solid #311f34;
 	border-bottom: 15px solid transparent;
 	left: -16px;
 	top: 0px;
@@ -65,7 +65,7 @@ div > .message__bubble__alt {
 	display: inline-block;
 	margin: 0px 0px 0px 17px;
 	border-radius: 15px;
-	background: #636a91;
+	background: #7d7098;
 	color: #fff;
 	padding: 10px 20px 10px 20px;
 	text-align: left;
@@ -84,8 +84,8 @@ div > .bubble__lip__alt:before {
 	height: 0px;
 	position: absolute;
 	border-left: 15px solid transparent;
-	border-right: 15px solid #636a91;
-	border-top: 15px solid #636a91;
+	border-right: 15px solid #7d7098;
+	border-top: 15px solid #7d7098;
 	border-bottom: 15px solid transparent;
 	left: -16px;
 	top: 0px;
