--- a/src/Header.css
+++ b/src/Header.css
@@ -78,8 +78,8 @@ div.nav__title {
 	color: #fff;
 }
 
-#root > div > div.makeStyles-grow-1 > header > div {
+/* #root > div > div.makeStyles-grow-1 > header > div {
 	background-color: #1e0521;
 	box-shadow: inset 0 0 0 2000px rgba(30, 5, 33, 0.6);
 	background-image: url("./images/shattered.png");
-}
+} */
